--- a/final_project/includes/utilities.ipynb
+++ b/final_project/includes/utilities.ipynb
@@ -85,8 +85,7 @@
     "                started = True\n",
     "        count += 1\n",
     "        time.sleep(10)\n",
-    "    return started    \n",
-    "\n"
+    "    return started    "
    ]
   }
  ],
